<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name_shengyiplus">生意＋SaaS版</string>
    <string name="app_name_yonghui">永辉生意＋SaaS版</string>
    <string name="app_name_shenzhenpoly">保臻生意＋SaaS版</string>
    <string name="image_error">错误</string>
    <string name="cansel">取消</string>
    <string name="passcode_lock">启用锁屏</string>
    <string name="passcode_set">锁屏设置</string>
    <string name="passcode_defalt_text">请输入密码</string>
    <string name="passcode_input">已锁屏</string>
    <string name="passcode_input_sub">请输入密码</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="period">.</string>

    <string name="login_submit">登录</string>
    <string name="login_password_placeholder">密码</string>
    <string name="login_username_placeholder">账户</string>
    <string name="login_slogan_text">融合共享，成于至善</string>


    <string name="text_report">报表</string>
    <string name="text_workbox">工具箱</string>
    <string name="text_mine">我的</string>

    <string name="text_scan">扫一扫</string>
    <string name="text_search">搜索</string>
    <string name="text_user_info">个人信息</string>
    <string name="text_sound">语音播报</string>
    <string name="text_share">分享</string>
    <string name="text_comment">评论</string>
    <string name="text_refresh">刷新</string>
    <string name="text_shaixuan">筛选</string>
    <string name="text_copylink">拷贝链接</string>
    <string name="text_hangjgao">行高</string>

    <!--个人信息-->
    <string name="text_user_role">用户角色</string>
    <string name="text_user_group">归属部门</string>
    <string name="text_password_alter">密码修改</string>
    <string name="text_issue">问题反馈</string>
    <string name="text_setting">我的设置</string>
    <string name="text_favorite">文章收藏</string>
    <string name="text_user_number">累计登陆</string>
    <string name="text_report_number">浏览报表</string>
    <string name="text_beyond">超越用户</string>

    <string name="text_phone_number">请输入手机号</string>
    <string name="text_input_code">请输入旧密码</string>
    <string name="text_get_code">获取验证码</string>
    <string name="text_new_password">请输入新密码</string>
    <string name="text_confirm_password">请再次输入新密码</string>

    <string name="text_system_notice">系统公告</string>
    <string name="text_work_notice">业务公告</string>
    <string name="text_warning_system">预警体系</string>
    <string name="text_report_comment">报表评论</string>

    <string name="title_activity_developer">DeveloperActivity</string>
    <string name="title_activity_speech">SpeechActivity</string>
    <string name="findPassword">找回密码</string>
    <string name="userID">用户编号</string>
    <string name="iphone">联系方式</string>
    <string name="submit">提交</string>
    <string name="btn_feedback">我要反馈</string>
    <string name="forgetPassword">忘记密码</string>
    <array name="array_affiche">
        <item>公告（1）：第一集群九月数据己更新</item>
        <item>公告（2）：第二集群九月数据己更新</item>
        <item>公告（3）：第三集群九月数据己更新</item>
        <item>公告（4）：第四集群九月数据己更新</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notice_phone_not_match">如遇到手机号不匹配，请至OA办公系统-个人信息-我的信息中修改手机号码，隔天生效。</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="clickToGetNearestLocalPosition">点击获取最近门店</string>
    <string name="input_barcode">手动输入条码</string>
    <string name="report_selector_hint">搜索门店名称或门店编号</string>
    <string name="hint_login_user">员工号/手机号/邮箱</string>
    <string name="tip_attribution_department">归属部门</string>
    <string name="keep_pwd">记住密码</string>
    <string name="report_copy">报表操作</string>
    <string name="screenLock">启用锁屏</string>
    <string name="clear_cache">清理缓存</string>

    <string name="activity_feedback">问题反馈</string>
    <string name="feedback_state">处理状态:</string>
    <string name="feedback_state_1">已提交</string>
    <string name="feedback_state_2">处理中</string>
    <string name="feedback_state_3">已解决</string>
    <string name="feedback_idea">问题修改及改进意见:</string>
    <string name="feedback_images">页面截图:</string>
    <string name="feedback_result">处理结果:</string>
    <string name="feedback_result_null">还没有处理结果呢, 请您耐心等待哟~</string>

    <string name="app_setting">应用设置</string>
    <string name="text_input_hint">请输入</string>
    <string name="loading_text">正在加载数据..</string>
    <string name="status_item_collection_list_draft">草稿</string>
    <string name="title_item_collection_list">问题反馈</string>
    <string name="auto_login">自动登录</string>
    <string name="save_last_report">报表自动跳转</string>
</resources>
