<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".dashboard.DashboardActivity">

    <LinearLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:background="@color/co10_syr"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="visible">

        <com.intfocus.syp_template.ui.view.TabView
            android:id="@+id/tab_kpi"
            style="@style/ToolBarTab"
            android:visibility="visible"
            app:active_src="@drawable/tab_overview_s"
            app:src="@drawable/tab_overview"
            app:text="@string/text_kpi"/>

        <com.intfocus.syp_template.ui.view.TabView
            android:id="@+id/tab_report"
            style="@style/ToolBarTab"
            android:visibility="visible"
            app:active_src="@drawable/tab_form_s"
            app:src="@drawable/tab_form"
            app:text="@string/text_report"/>

        <com.intfocus.syp_template.ui.view.TabView
            android:id="@+id/tab_workbox"
            style="@style/ToolBarTab"
            android:visibility="visible"
            app:active_src="@drawable/tab_special_s"
            app:src="@drawable/tab_special"
            app:text="@string/text_workbox"/>

        <com.intfocus.syp_template.ui.view.TabView
            android:id="@+id/tab_mine"
            style="@style/ToolBarTab"
            android:visibility="visible"
            app:active="false"
            app:active_src="@drawable/tab_my_s"
            app:src="@drawable/tab_my"
            app:text="@string/text_mine"/>

    </LinearLayout>

    <com.intfocus.syp_template.ui.view.NoScrollViewPager
        android:id="@+id/content_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/toolBar"/>

    <View
        android:id="@+id/view_shadow"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_above="@+id/toolBar"
        android:background="@drawable/pic_shadow"
        android:visibility="visible"/>

</RelativeLayout>
