<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_margin="5dp"
    app:cardElevation="15dp"
    app:contentPadding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tv_item_collection_list_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="10dp"
            android:text="@string/status_item_collection_list_draft"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_item_collection_list_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="[标签]"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_item_collection_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tv_item_collection_list_title_label"
            android:layout_toStartOf="@id/tv_item_collection_list_status"
            android:text="@string/title_item_collection_list"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_item_collection_list_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_toStartOf="@id/tv_item_collection_list_status"
            android:text="1232年12月12日"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/tv_item_collection_list_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/tv_item_collection_list_time"
            android:layout_below="@id/tv_item_collection_list_title"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_toStartOf="@id/tv_item_collection_list_status"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/notice_phone_not_match"
            android:textSize="10sp"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>